--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 
 body
 {
+      font-family: Arial, Helvetica, sans-serif;
       background-image: url(../img/background.jpg);
       background-repeat: no-repeat;
       background-position: center center;
